--- a/config-server-client-development.properties
+++ b/config-server-client-development.properties
@@ -1,1 +1,4 @@
+server.port=8090
+server.contextPath=/ws-demo
+endpoints.health.path=/health
 msg = Hello world - this is from config server Development environment
