--- a/app-ws-democlient-development.properties
+++ b/app-ws-democlient-development.properties
@@ -3,4 +3,4 @@ server.contextPath=/ws-democlient
 endpoints.health.path=/health
 msg = Hello world - this is from config server Development environment
 
-wsdemo.service=http://34.210.106.172:9501/app-ws-cucumber/demo/person
+wsdemo.service=http://34.210.106.172:9501/app-ws-cucumber/
